Fixed incorrect scaling on Firefox

--- a/css/pages.css
+++ b/css/pages.css
@@ -50,8 +50,8 @@ img {
 }
 
 .non-active {
-    width: 400px;
-    height: 240px;
+    width: 25em;
+    height: 15em;
 }
 
 .active {
